<resources>
    <string name="app_name"></string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_home1">HomeActivity!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <!-- TODO:IMAGE BUTTON -->
    <string name="mis_emociones">ImageButton</string>
    <string name="mis_stats">ImageButton</string>
    <string name="mi_especialista">ImageButton</string>
    <string name="relajacion">ImageButton</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="preference_file_key" />
    <string name="correo">Correo</string>
    <string name="apellidos">Apellidos</string>
    <string name="ingrese_sus_datos">Ingrese sus datos</string>
    <string name="especialidad">Especialidad</string>
    <string name="crear">Crear</string>
    <string name="nro_de_colegiatura">Nro. de Colegiatura</string>
    <string name="nombres">Nombres</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="home">Home</string>
    <string-array name="rols">
        <item>Especialista</item>
        <item>Paciente</item>

    </string-array>
</resources>